--- a/style.css
+++ b/style.css
@@ -12,17 +12,15 @@ ul {
 }
 
 body {
-    background-color: #121214;
-    background-image: url(./assets/bg.svg);
-    background-size: cover;
-    background-position-x: center;
-    background-position-y: 75.6%;
-    background-repeat: no-repeat;
+    background: #00416A;
+    background: -webkit-linear-gradient(to right, #FFE000, #799F0C, #00416A);
+    background: linear-gradient(to right, #FFE000, #799F0C, #00416A);
 }
 
 #app {
     width: fit-content;
     margin: 52px auto;
+
 }
 
 header {
@@ -34,6 +32,12 @@ header {
     text-align: center;
 }
 
+header:hover {
+    background-color: rgb(0, 0, 156);
+    border-bottom: 3px solid rgb(14, 149, 25);
+    transition: 0.3s;
+}
+
 #cards {
     display: flex;
     flex-direction: column;
@@ -43,7 +47,6 @@ header {
 .card {
     padding: 32px 23px;
     text-align: center;
-
     background: #1d1c19;
     border-bottom: 3px solid rgb(226, 230, 6);
     border-radius: 6px;
@@ -93,4 +96,40 @@ header {
 .card ul li+li {
     padding-top: 24px;
     border-top: 1px solid #323238;
+}
+
+.card ul li strong:hover,
+.card ul li img:hover {
+    transform: scale(1.1);
+}
+
+.card ul li strong,
+.card ul li img {
+    transition: transform 0.3s;
+}
+
+.card {
+    opacity: 0;
+    animation: appear 0.2s forwards;
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    #cards {
+        max-width: 670px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+}
+    
 }
