--- a/style.css
+++ b/style.css
@@ -113,6 +113,24 @@ header:hover {
     animation: appear 0.2s forwards;
 }
 
+.name_caixa{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.name_time {
+    display: flex;
+    flex-direction: row;
+    font-size: 10px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    background-color: #f7dd43;
+    padding: 3px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
 @keyframes appear {
     0% {
         opacity: 0;
